--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 Original Authors of ShinyMUD:
-Jess Coulter    <jess@IncendiarySoftware.com>
-Patrick Murphy  <patrick@IncendiarySoftware.com>
-Nick Saint      <nick@IncendiarySoftware.com>
+Jess Coulter        <jess@IncendiarySoftware.com>
+Patrick Murphy      <patrick@IncendiarySoftware.com>
+Nickolaus D. Saint  <nick@IncendiarySoftware.com>
