Fixed json requirement, and dictionary problem.
Included simplejson source code in the resources directory,
and built a sanitize function that always makes sure that dictionary
keys are 'str' string instead of unicode strings.

--- a/README
+++ b/README
@@ -30,3 +30,7 @@ port number (as well as lots of other things) in: src/data/config.py
 
 A list of ShinyMUD authors and the License for ShinyMUD can be found in the
 AUTHORS file and the LICENSE file, respectively.
+
+Any included libraries in the `resources` folder are authored and
+licensed by their respective owners, see LICENSE files within the
+libraries.
